--- a/CV.org
+++ b/CV.org
@@ -1,4 +1,5 @@
 #+OPTIONS: num:nil ^:nil
+#+PANDOC_VARIABLES: margin-top:15 margin-bottom:15 margin-left:15 margin-right:15
 Brasileiro, solteiro, nascido em 1987\\
 #+INCLUDE: sensitive.org
 
@@ -56,8 +57,6 @@ Desenvolvedor.
   - Groovy
   - Windows Batch
 - VIM, Emacs
-  
-* GitHub
-
-- [[https://github.com/lbrayner/vim-rzip][vim-rzip]]
-- [[https://github.com/lbrayner/vtt-to-srt][vtt-to-srt]]
+- Git
+  - [[https://github.com/lbrayner/vim-rzip][vim-rzip]]
+  - [[https://github.com/lbrayner/vtt-to-srt][vtt-to-srt]]
