New info; org out of sync

--- a/CV.org
+++ b/CV.org
@@ -19,7 +19,7 @@ Desenvolvedor.
 
 * Formação
 
-- Ciência da Computação (*UFPE*)
+Ciência da Computação (*UFPE*).
 
 * Qualificações e Atividades Profissionais
 
